@@ -2,38 +2,38 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-  <title>GXemul: Components: m88k_cpu</title>
+  <title>GXemul: Components: i960_cpu</title>
   <meta name="robots" content="noarchive,nofollow,noindex">
 </head>
 <body style="font-family : sans-serif;">
 
 <!-- 10 lines header.  -->
 
-<h1>GXemul: Components: <tt>m88k_cpu</tt></h1>
+<h1>GXemul: Components: <tt>i960_cpu</tt></h1>
 <p>
 
 <a href="../">Back to the index.</a>
 <p><a href="../components.html">Back to the component index.</a>
 
 
-<p><br><h2><tt>m88k_cpu</tt> component</h2>
+<p><br><h2><tt>i960_cpu</tt> component</h2>
 
-This component represents a
-<a href="http://en.wikipedia.org/wiki/Motorola_88000">Motorola 88000</a>-like 
+This component represents an
+<a href="https://en.wikipedia.org/wiki/Intel_i960">Intel i960</a>-like 
 <a href="component_cpu.html">CPU component</a>.
 
 <p>Features that have been implemented:
 
 <ul>
-	<li>88100 disassembly.
+	<li>None.
 </ul>
 
-<p>TODO: Almost everything.
+<p>TODO: Everything.
 
 
 <p>
 Source code documentation for this component can be found
-<a href="../doxygen/html/classM88K__CPUComponent.html">here</a>.
+<a href="../doxygen/html/classI960__CPUComponent.html">here</a>.
 
 <p><br><hr>
 </body>
